--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@bunchtogether/boost-client",
-  "version": "1.0.36",
+  "version": "1.0.37",
   "main": "dist/index.js",
   "repository": "https://github.com/bunchtogether/boost-client2.git",
   "author": "johnwehr@bunchtogether.com",
@@ -32,42 +32,43 @@
     }
   },
   "devDependencies": {
-    "babel-eslint": "^9.0.0",
-    "codecov": "^3.3.0",
-    "cross-env": "^5.2.0",
-    "documentation": "^9.3.1",
-    "eslint": "^5.16.0",
+    "@babel/core": "^7.9.0",
+    "@babel/plugin-transform-flow-strip-types": "^7.9.0",
+    "babel-eslint": "^10.1.0",
+    "codecov": "^3.6.5",
+    "cross-env": "^7.0.2",
+    "documentation": "^12.3.0",
+    "eslint": "^6.8.0",
     "eslint-config-bunchtogether": "^1.1.6",
-    "eslint-plugin-flowtype": "^3.5.1",
-    "eslint-plugin-flowtype-errors": "^4.1.0",
-    "eslint-plugin-import": "^2.16.0",
-    "eslint-plugin-jest": "^22.4.1",
-    "eslint-plugin-jsx-a11y": "^6.2.1",
-    "eslint-plugin-react": "^7.12.4",
-    "expect": "^24.7.1",
-    "flow-bin": "^0.96.0",
-    "flow-copy-source": "^2.0.3",
-    "flow-remove-types": "^1.2.3",
-    "flow-typed": "^2.5.1",
-    "husky": "^4.2.4",
-    "jest": "^24.7.1",
-    "jest-diff": "^24.7.0",
+    "eslint-plugin-flowtype": "^4.7.0",
+    "eslint-plugin-flowtype-errors": "^4.2.0",
+    "eslint-plugin-import": "^2.20.2",
+    "eslint-plugin-jest": "^23.8.2",
+    "eslint-plugin-jsx-a11y": "^6.2.3",
+    "eslint-plugin-react": "^7.19.0",
+    "expect": "^25.3.0",
+    "flow-bin": "^0.122.0",
+    "flow-copy-source": "^2.0.9",
+    "flow-typed": "^3.1.0",
+    "husky": "^4.2.5",
+    "jest": "^25.3.0",
+    "jest-diff": "^25.3.0",
     "jest-flow-transform": "^1.0.1",
-    "react": "^16.8.6"
+    "react": "^16.13.1"
   },
   "dependencies": {
-    "@bunchtogether/braid-client": "^1.1.13",
+    "@bunchtogether/braid-client": "^1.1.15",
     "@callstack/async-storage": "^2.0.3",
-    "hoist-non-react-statics": "^3.3.0",
+    "hoist-non-react-statics": "^3.3.2",
     "immutable": "^4.0.0-rc.12",
-    "lodash": "^4.17.11",
-    "query-string": "^6.4.2",
-    "redux-saga": "^1.0.2",
-    "superagent": "^5.0.2",
+    "lodash": "^4.17.15",
+    "query-string": "^6.12.1",
+    "redux-saga": "^1.1.3",
+    "superagent": "^5.2.2",
     "superagent-prefix": "^0.0.2",
     "superagent-use": "^0.1.0"
   },
   "peerDependencies": {
-    "react": "^16.8.6"
+    "react": "^16.13.1"
   }
 }
