--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@bunchtogether/boost-client",
-  "version": "1.1.22",
+  "version": "1.1.23",
   "main": "dist/index.js",
   "repository": "https://github.com/bunchtogether/boost-client2.git",
   "author": "johnwehr@bunchtogether.com",
@@ -13,12 +13,8 @@
     "lint:js": "eslint -c ./.eslintrc --no-eslintrc --fix --cache .",
     "lint:flow": "flow --show-all-errors",
     "coverage": "codecov",
-    "documentation": "documentation readme src/index.js --section='API'"
-  },
-  "husky": {
-    "hooks": {
-      "pre-commit": "yarn lint && yarn documentation && yarn build && git add dist"
-    }
+    "documentation": "documentation readme src/index.js --section='API'",
+    "prepare": "husky install"
   },
   "jest": {
     "coverageDirectory": "./coverage/",
@@ -32,45 +28,44 @@
     }
   },
   "devDependencies": {
-    "@babel/core": "^7.9.0",
-    "@babel/plugin-proposal-class-properties": "^7.8.3",
-    "@babel/plugin-transform-flow-strip-types": "^7.9.0",
+    "@babel/core": "^7.14.2",
+    "@babel/plugin-proposal-class-properties": "^7.13.0",
+    "@babel/plugin-transform-flow-strip-types": "^7.13.0",
     "babel-eslint": "^10.1.0",
-    "codecov": "^3.6.5",
-    "cross-env": "^7.0.2",
-    "documentation": "^12.3.0",
-    "eslint": "^6.8.0",
+    "codecov": "^3.8.2",
+    "cross-env": "^7.0.3",
+    "documentation": "^13.2.5",
+    "eslint": "^7.26.0",
     "eslint-config-bunchtogether": "^1.1.6",
-    "eslint-plugin-flowtype": "^4.7.0",
-    "eslint-plugin-flowtype-errors": "^4.2.0",
-    "eslint-plugin-import": "^2.20.2",
-    "eslint-plugin-jest": "^23.8.2",
-    "eslint-plugin-jsx-a11y": "^6.2.3",
-    "eslint-plugin-react": "^7.19.0",
+    "eslint-plugin-flowtype": "^5.7.2",
+    "eslint-plugin-flowtype-errors": "^4.4.0",
+    "eslint-plugin-import": "^2.23.0",
+    "eslint-plugin-jest": "^24.3.6",
+    "eslint-plugin-jsx-a11y": "^6.4.1",
+    "eslint-plugin-react": "^7.23.2",
     "expect": "^26.6.2",
     "flow-bin": "^0.125.1",
     "flow-copy-source": "^2.0.9",
-    "flow-typed": "^3.1.0",
-    "husky": "^4.2.5",
+    "flow-typed": "^3.3.1",
+    "husky": "^6.0.0",
     "jest": "^26.6.3",
     "jest-diff": "^26.6.2",
     "jest-flow-transform": "^1.0.1",
-    "react": "^17.0.1"
+    "react": "^17.0.2"
   },
   "dependencies": {
-    "@bunchtogether/braid-client": "^1.1.33",
+    "@bunchtogether/braid-client": "^1.1.40",
     "@callstack/async-storage": "^2.0.3",
     "hoist-non-react-statics": "^3.3.2",
     "immutable": "^4.0.0-rc.12",
     "lodash": "^4.17.21",
-    "query-string": "^6.12.1",
+    "query-string": "^7.0.0",
     "redux-saga": "^1.1.3",
-    "superagent": "^5.2.2",
+    "superagent": "^6.1.0",
     "superagent-prefix": "^0.0.2",
     "superagent-use": "^0.1.0"
   },
   "peerDependencies": {
-    "flow-bin": "^0.123.0",
-    "react": "^17.0.1"
+    "react": "^17.0.2"
   }
 }
