--- a/babel.config.json
+++ b/babel.config.json
@@ -1,3 +1,32 @@
 {
-  "plugins": [["@babel/plugin-transform-flow-strip-types", {"allowDeclareFields": true}]]
+  "plugins": [
+    ["@babel/plugin-transform-flow-strip-types", {"allowDeclareFields": true}],
+    "@babel/plugin-syntax-jsx",
+    "@babel/plugin-proposal-class-properties"
+  ],
+  "env": {
+    "esmBundled": {
+      "presets": [
+        ["@babel/env", { "targets": "> 0.25%, not dead"}]
+      ],
+    },
+    "cjs": {
+      "presets": [
+        ["@babel/env", { "modules": "commonjs", "targets": {"node": "current" }}]
+      ],
+      "exclude": "@babel/plugin-transform-regenerator"
+    },
+    "test": {
+      "presets": [
+        [
+          "@babel/preset-env",
+          {
+            "targets": {
+              "node": "current"
+            }
+          }
+        ]
+      ]
+    }
+  }
 }
