--- a/package.json
+++ b/package.json
@@ -1,11 +1,12 @@
 {
   "name": "@bunchtogether/boost-client",
-  "version": "1.1.25",
+  "version": "1.1.26",
   "main": "dist/index.js",
   "repository": "https://github.com/bunchtogether/boost-client2.git",
   "author": "johnwehr@bunchtogether.com",
   "scripts": {
-    "build": "rm -rf ./dist; flow-remove-types ./src --out-dir ./dist && flow-copy-source ./src ./dist",
+    "build:esm": "cross-env BABEL_ENV=esm babel ./src --out-dir ./dist --keep-file-extension --source-maps && flow-copy-source ./src ./dist",
+    "build": "rm -rf ./dist && mkdir -p ./dist && yarn build:esm",
     "flow-typed": "./node_modules/.bin/flow-typed install --overwrite",
     "test": "yarn lint && yarn test:js",
     "test:js": "cross-env NODE_ENV=test jest --runInBand --detectOpenHandles tests",
@@ -28,28 +29,30 @@
     }
   },
   "devDependencies": {
-    "@babel/core": "^7.14.2",
-    "@babel/plugin-proposal-class-properties": "^7.13.0",
-    "@babel/plugin-transform-flow-strip-types": "^7.13.0",
+    "@babel/cli": "^7.14.5",
+    "@babel/core": "^7.14.6",
+    "@babel/plugin-proposal-class-properties": "^7.14.5",
+    "@babel/plugin-syntax-jsx": "^7.14.5",
+    "@babel/plugin-transform-flow-strip-types": "^7.14.5",
     "babel-eslint": "^10.1.0",
     "codecov": "^3.8.2",
     "cross-env": "^7.0.3",
     "documentation": "^13.2.5",
-    "eslint": "^7.26.0",
+    "eslint": "^7.29.0",
     "eslint-config-bunchtogether": "^1.1.6",
     "eslint-plugin-flowtype": "^5.7.2",
     "eslint-plugin-flowtype-errors": "^4.4.0",
     "eslint-plugin-import": "^2.23.0",
     "eslint-plugin-jest": "^24.3.6",
     "eslint-plugin-jsx-a11y": "^6.4.1",
-    "eslint-plugin-react": "^7.23.2",
-    "expect": "^26.6.2",
+    "eslint-plugin-react": "^7.24.0",
+    "expect": "^27.0.2",
     "flow-bin": "^0.125.1",
     "flow-copy-source": "^2.0.9",
     "flow-typed": "^3.3.1",
     "husky": "^6.0.0",
-    "jest": "^26.6.3",
-    "jest-diff": "^26.6.2",
+    "jest": "^27.0.4",
+    "jest-diff": "^27.0.2",
     "jest-flow-transform": "^1.0.1",
     "react": "^17.0.2"
   },
@@ -59,7 +62,7 @@
     "hoist-non-react-statics": "^3.3.2",
     "immutable": "^4.0.0-rc.12",
     "lodash": "^4.17.21",
-    "query-string": "^7.0.0",
+    "query-string": "^7.0.1",
     "redux-saga": "^1.1.3",
     "superagent": "^6.1.0",
     "superagent-prefix": "^0.0.2",
