--- a/babel.config.json
+++ b/babel.config.json
@@ -1,7 +1,7 @@
 {
   "plugins": [
     ["@babel/plugin-transform-flow-strip-types", {"allowDeclareFields": true}],
-    "@babel/plugin-syntax-jsx",
+    "@babel/plugin-transform-react-jsx",
     "@babel/plugin-proposal-class-properties"
   ],
   "env": {
