--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "repository": "https://github.com/bunchtogether/boost-client2.git",
   "author": "johnwehr@bunchtogether.com",
   "scripts": {
-    "build:esm": "cross-env BABEL_ENV=esm babel ./src --out-dir ./dist --source-maps && flow-copy-source ./src ./dist",
+    "build:esm": "cross-env BABEL_ENV=esm babel ./src --out-dir ./dist --source-maps && flow-copy-source ./src ./dist && find ./dist -depth -name \"*.jsx.flow\" -exec sh -c 'mv \"$1\" \"${1%.jsx.flow}.js.flow\"' _ {} \\;",
     "build": "rm -rf ./dist && mkdir -p ./dist && yarn build:esm",
     "flow-typed": "./node_modules/.bin/flow-typed install --overwrite",
     "test": "yarn lint && yarn test:js",
