--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@bunchtogether/boost-client",
-  "version": "1.2.4",
+  "version": "1.3.0",
   "main": "dist/index.js",
   "repository": "https://github.com/bunchtogether/boost-client2.git",
   "author": "johnwehr@bunchtogether.com",
@@ -29,38 +29,37 @@
     }
   },
   "devDependencies": {
-    "@babel/cli": "^7.15.4",
-    "@babel/core": "^7.15.5",
-    "@babel/plugin-proposal-class-properties": "^7.14.5",
-    "@babel/plugin-transform-flow-strip-types": "^7.14.5",
-    "@babel/plugin-transform-react-jsx": "^7.14.9",
-    "babel-eslint": "^10.1.0",
+    "@babel/cli": "^7.16.0",
+    "@babel/core": "^7.16.0",
+    "@babel/eslint-parser": "^7.16.3",
+    "@babel/plugin-proposal-class-properties": "^7.16.0",
+    "@babel/plugin-transform-flow-strip-types": "^7.16.0",
+    "@babel/plugin-transform-react-jsx": "^7.16.0",
     "codecov": "^3.8.3",
     "cross-env": "^7.0.3",
     "documentation": "^13.2.5",
-    "eslint": "^7.32.0",
+    "eslint": "^8.4.1",
     "eslint-config-bunchtogether": "^1.1.6",
-    "eslint-plugin-flowtype": "^6.0.1",
-    "eslint-plugin-flowtype-errors": "^4.4.0",
-    "eslint-plugin-import": "^2.24.2",
-    "eslint-plugin-jest": "^24.4.2",
-    "eslint-plugin-jsx-a11y": "^6.4.1",
-    "eslint-plugin-react": "^7.25.2",
-    "expect": "^27.2.0",
+    "eslint-plugin-flowtype": "^8.0.3",
+    "eslint-plugin-flowtype-errors": "^4.5.0",
+    "eslint-plugin-import": "^2.25.3",
+    "eslint-plugin-jest": "^25.3.0",
+    "eslint-plugin-jsx-a11y": "^6.5.1",
+    "eslint-plugin-react": "^7.27.1",
+    "expect": "^27.4.2",
     "flow-bin": "^0.125.1",
     "flow-copy-source": "^2.0.9",
-    "flow-typed": "^3.3.1",
-    "husky": "^7.0.2",
-    "jest": "^27.2.0",
-    "jest-diff": "^27.2.0",
+    "flow-typed": "^3.5.0",
+    "husky": "^7.0.4",
+    "jest": "^27.4.3",
+    "jest-diff": "^27.4.2",
     "jest-flow-transform": "^1.0.1",
     "react": "^17.0.2"
   },
   "dependencies": {
-    "@bunchtogether/braid-client": "1.1.54",
-    "@callstack/async-storage": "^2.0.3",
+    "@bunchtogether/braid-client": "1.2.3",
     "hoist-non-react-statics": "^3.3.2",
-    "immutable": "^4.0.0-rc.15",
+    "immutable": "^4.0.0",
     "lodash": "^4.17.21",
     "query-string": "^7.0.1",
     "redux-saga": "^1.1.3",
