--- a/.flowconfig
+++ b/.flowconfig
@@ -1,9 +1,13 @@
 [ignore]
 
+<PROJECT_ROOT>/dist/*
 <PROJECT_ROOT>/src/components/withTimeSeries/.*
-<PROJECT_ROOT>/dist/.*
-
+.*/node_modules/documentation/*
+.*/node_modules/deepstream.io/test/*
+.*/node_modules/resolve/.*
+.*/node_modules/*.cjs.js.flow
 [include]
+
 
 [libs]
 
@@ -11,3 +15,4 @@ flow/
 
 [options]
 traces=3
+module.name_mapper='p-queue' ->'<PROJECT_ROOT>/node_modules/p-queue/dist/index.js'
